Some minor changes. Declare constants final Use Boolean.valueOf insted of new Boolean Use entrySet instead of keySet on Maps
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13595 91430c5f-d668-0410-9e7d-dd663366dcfd